# VividPlay

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  media_analyzer.cpp  media_analyzer.h  native_lib.cpp
app/src/main/java/com/vividplay/app/: VividPlayApp.kt
app/src/main/java/com/vividplay/app/data/: MediaRepository.kt  ResumeStore.kt
app/src/main/java/com/vividplay/app/gesture/: PlayerGestures.kt
app/src/main/java/com/vividplay/app/nativebridge/: NativeBridge.kt
app/src/main/java/com/vividplay/app/player/: PlaybackService.kt
app/src/main/java/com/vividplay/app/ui/: MainActivity.kt  PlayerActivity.kt
app/src/main/java/com/vividplay/app/ui/player/: PlayerScreen.kt
app/src/main/java/com/vividplay/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
